--- a/simplic-interval/Simplic.Interval.UI/IntervalControl.xaml
+++ b/simplic-interval/Simplic.Interval.UI/IntervalControl.xaml
@@ -14,8 +14,8 @@
              d:DesignHeight="200" Height="200" d:DesignWidth="300">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="24"></RowDefinition>
-            <RowDefinition Height="24"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -26,7 +26,7 @@
             <ColumnDefinition Width="200*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Label Grid.Column="0" Grid.Row="0" Content="Intervall"></Label>
-        <simplic:LookupTextBox VerticalAlignIdentityTextBox="False" x:Name="intervalTypeLookupTextBox" Uid="T32" Margin="3" Height="24" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" Width="200" IsTabStop="True"
+        <simplic:LookupTextBox x:Name="intervalTypeLookupTextBox" Uid="T32" Margin="3" Height="24" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" Width="200" IsTabStop="True"
                                    Identity="{Binding TypeNumber, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged,ValidatesOnDataErrors=True}" 
                                    ShowIdentityTextBox="False" >
             <dbui:LookupTextBox.SelectionProvider>
@@ -36,7 +36,7 @@
             </dbui:LookupTextBox.SelectionProvider>
         </simplic:LookupTextBox>
         <Label Grid.Column="0" Grid.Row="1" Content="Tag"></Label>
-        <simplic:LookupTextBox IsEnabled="{Binding DayByName}" VerticalAlignIdentityTextBox="False"  Uid="T32" Margin="3" Height="24" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="1" Width="200" IsTabStop="True"
+        <simplic:LookupTextBox IsEnabled="{Binding DayByName}"  Uid="T32" Margin="3" Height="24"  HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="1" Width="200" IsTabStop="True"
                                    Identity="{Binding DayNameOfExecution, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged,ValidatesOnDataErrors=True}" 
                                    ShowIdentityTextBox="False" >
             <dbui:LookupTextBox.SelectionProvider>
@@ -50,7 +50,7 @@
         <Label Grid.Column="0" Grid.Row="3" Content="Ausführungstag"></Label>
         <simplic:RadNumericUpDownKeyControl IsEnabled="{Binding DayByNumber}"  ShowButtons="False" ValueFormat="Numeric" IsInteger="True" Margin="3" Height="24" Maximum="31" Minimum="1" Grid.Column="1" Grid.Row="3" Value="{Binding DayNumberOfExecution,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"></simplic:RadNumericUpDownKeyControl>
         <Label Grid.Column="0" Grid.Row="4" Content="Letzte Ausführung"></Label>
-        <simplic:DateTimeControl Grid.Row="4" Grid.Column="1" Height="24" Width="200" DateTimeValue="{Binding LastExecute}" IsEnabled="False"></simplic:DateTimeControl>
+        <simplic:DateTimeControl Margin="3"  Grid.Row="4" Grid.Column="1" Height="24" Width="200" DateTimeValue="{Binding LastExecute}" IsEnabled="False"></simplic:DateTimeControl>
         <Label Grid.Column="0" Grid.Row="5" Content="Anzahl"></Label>
         <simplic:RadNumericUpDownKeyControl ShowButtons="False" IsReadOnly="True" IsEnabled="False" ValueFormat="Numeric" IsInteger="True" Margin="3" Height="24" Grid.Column="1" Grid.Row="5" Value="{Binding ExecuteCount,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"></simplic:RadNumericUpDownKeyControl>
     </Grid>
