--- a/simplic-interval/Simplic.Interval.UI/IntervalControl.xaml
+++ b/simplic-interval/Simplic.Interval.UI/IntervalControl.xaml
@@ -23,7 +23,7 @@
             <ColumnDefinition Width="200*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Label Grid.Column="0" Grid.Row="0" Content="Intervall" ></Label>
-        <simplic:LookupTextBox  x:Name="intervalTypeLookupTextBox" Uid="T32" Height="24" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" Width="200" IsTabStop="True"
+        <simplic:LookupTextBox  x:Name="intervalTypeLookupTextBox" Uid="T32" Height="24" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" IsTabStop="True"
                                    Identity="{Binding IntervalTypeId, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged,ValidatesOnDataErrors=True}" 
                                    ShowIdentityTextBox="False" >
             <dbui:LookupTextBox.SelectionProvider>
@@ -33,22 +33,22 @@
             </dbui:LookupTextBox.SelectionProvider>
         </simplic:LookupTextBox>
         <Label Grid.Column="0"  Grid.Row="1" Content="Tag"></Label>
-        <simplic:LookupTextBox IsEnabled="{Binding DayByName,UpdateSourceTrigger=PropertyChanged}"  Uid="T32" Height="24"  HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="1" Width="200" IsTabStop="True"
+        <simplic:LookupTextBox IsEnabled="{Binding DayByName,UpdateSourceTrigger=PropertyChanged}"  Uid="T32" Height="24"  HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="1" IsTabStop="True"
                                    Identity="{Binding DayNameOfExecution, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged,ValidatesOnDataErrors=True}" 
                                    ShowIdentityTextBox="False" >
             <dbui:LookupTextBox.SelectionProvider>
-                <dbui:ItemBoxSelectionProvider ItemBoxName="IB_Interval_Day" DisplayColumn="DisplayName" IdentityColumn="EntryValue" DisplayFriendlyColumn="DisplayName"
+                <dbui:ItemBoxSelectionProvider ItemBoxName="IB_Interval_Day" DisplayColumn="DisplayName" IdentityColumn="EntryValue" DisplayFriendlyColumn="DisplayName" 
                                                    LoadByIdentityStatement="SELECT fl.DisplayName, fl.EntryValue from ESS_MS_Controls_FormatList fl where  fl.InternName = 'Interval_Day' and fl.EntryValue = '[SearchString]'">
                 </dbui:ItemBoxSelectionProvider>
             </dbui:LookupTextBox.SelectionProvider>
         </simplic:LookupTextBox>
         <Label Grid.Column="0" Grid.Row="2" Content="Monat"></Label>
-        <simplic:RadNumericUpDownKeyControl  IsEnabled="{Binding MonthNumber,UpdateSourceTrigger=PropertyChanged}"  ShowButtons="False" ValueFormat="Numeric" IsInteger="True"  Height="24" Maximum="{Binding MonthMaximum, UpdateSourceTrigger=PropertyChanged}" Minimum="1" Grid.Column="1" Grid.Row="2" Value="{Binding MonthNumberOfExecution,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"></simplic:RadNumericUpDownKeyControl>
+        <simplic:NumericUpDown  IsEnabled="{Binding MonthNumber,UpdateSourceTrigger=PropertyChanged}"  ShowButtons="False" ValueFormat="Numeric" IsInteger="True" HorizontalAlignment="Stretch" Height="26" Maximum="{Binding MonthMaximum, UpdateSourceTrigger=PropertyChanged}" Minimum="1" Grid.Column="1" Grid.Row="2" Value="{Binding MonthNumberOfExecution,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"></simplic:NumericUpDown>
         <Label Grid.Column="0" Grid.Row="3" Content="Ausführungstag"></Label>
-        <simplic:RadNumericUpDownKeyControl  IsEnabled="{Binding DayByNumber,UpdateSourceTrigger=PropertyChanged}"  ShowButtons="False" ValueFormat="Numeric" IsInteger="True"  Height="24" Maximum="31" Minimum="1" Grid.Column="1" Grid.Row="3" Value="{Binding DayNumberOfExecution,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"></simplic:RadNumericUpDownKeyControl>
+        <simplic:NumericUpDown  IsEnabled="{Binding DayByNumber,UpdateSourceTrigger=PropertyChanged}"  ShowButtons="False"  ValueFormat="Numeric" IsInteger="True" HorizontalAlignment="Stretch" Height="26" Maximum="31" Minimum="1" Grid.Column="1" Grid.Row="3" Value="{Binding DayNumberOfExecution,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"></simplic:NumericUpDown>
         <Label Grid.Column="0" Grid.Row="4" Content="Letzte Ausführung"></Label>
-        <simplic:DateTimeControl  Grid.Row="4" Grid.Column="1" Height="24" Width="200" DateTimeValue="{Binding LastExecute}" IsEnabled="False"></simplic:DateTimeControl>
+        <simplic:DateTimeControl  Grid.Row="4" Grid.Column="1" Height="24"  DateTimeValue="{Binding LastExecute}" IsEnabled="False" HorizontalAlignment="Left"></simplic:DateTimeControl>
         <Label Grid.Column="0" Grid.Row="5" Content="Anzahl"></Label>
-        <simplic:RadNumericUpDownKeyControl ShowButtons="False" IsReadOnly="True" IsEnabled="False" ValueFormat="Numeric" IsInteger="True"  Height="24" Grid.Column="1" Grid.Row="5" Value="{Binding ExecuteCount,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"></simplic:RadNumericUpDownKeyControl>
+        <simplic:NumericUpDown ShowButtons="False" IsReadOnly="True" IsEnabled="False" ValueFormat="Numeric" IsInteger="True"  Height="26" Grid.Column="1" Grid.Row="5" Value="{Binding ExecuteCount,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" HorizontalAlignment="Stretch"></simplic:NumericUpDown>
     </Grid>
 </UserControl>
