--- a/simplic-interval/Simplic.Interval.UI/IntervalControl.xaml
+++ b/simplic-interval/Simplic.Interval.UI/IntervalControl.xaml
@@ -45,7 +45,10 @@
         <Label Grid.Column="0" Grid.Row="2" Content="Monat"></Label>
         <simplic:NumericUpDown  IsEnabled="{Binding MonthNumber,UpdateSourceTrigger=PropertyChanged}"  ShowButtons="False" ValueFormat="Numeric" IsInteger="True" HorizontalAlignment="Stretch" Height="26" Maximum="{Binding MonthMaximum, UpdateSourceTrigger=PropertyChanged}" Minimum="1" Grid.Column="1" Grid.Row="2" Value="{Binding MonthNumberOfExecution,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"></simplic:NumericUpDown>
         <Label Grid.Column="0" Grid.Row="3" Content="Ausführungstag"></Label>
-        <simplic:NumericUpDown  IsEnabled="{Binding DayByNumber,UpdateSourceTrigger=PropertyChanged}"  ShowButtons="False"  ValueFormat="Numeric" IsInteger="True" HorizontalAlignment="Stretch" Height="26" Maximum="31" Minimum="-31" Grid.Column="1" Grid.Row="3" Value="{Binding DayNumberOfExecution,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"></simplic:NumericUpDown>
+        <StackPanel  Grid.Column="1" Grid.Row="3" Orientation="Horizontal" >
+        <simplic:NumericUpDown  IsEnabled="{Binding DayByNumber,UpdateSourceTrigger=PropertyChanged}"  ShowButtons="False"  ValueFormat="Numeric" IsInteger="True" HorizontalAlignment="Left" MinWidth="150" Height="26" Maximum="31" Minimum="-31" Value="{Binding DayNumberOfExecution,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"></simplic:NumericUpDown>
+            <Image Width="31" Source="{simplic:Icon Name=billableitem_invalid_32x}" ToolTip="Ein negativer Wert zählt abwärts vom Monatsende!" Height="31"></Image>
+        </StackPanel>
         <Label Grid.Column="0" Grid.Row="4" Content="Letzte Ausführung"></Label>
         <simplic:DateTimeControl  Grid.Row="4" Grid.Column="1" Height="24"  DateTimeValue="{Binding LastExecute}" IsEnabled="False" HorizontalAlignment="Left"></simplic:DateTimeControl>
         <Label Grid.Column="0" Grid.Row="5" Content="Anzahl"></Label>
