--- a/simplic-user/Simplic.User.UI/UserControls/UserBox.xaml
+++ b/simplic-user/Simplic.User.UI/UserControls/UserBox.xaml
@@ -1,5 +1,6 @@
 ﻿<UserControl x:Class="Simplic.User.UI.UserBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:simplic="http://schemas.simplic-systems.com/2016/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Simplic.User.UI" Width="130">
     <Grid>
@@ -10,12 +11,12 @@
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Height="15" Width="15" DockPanel.Dock="Right" BorderThickness="0" Background="LightGray"  Click="OnEdit">
                 <Button.Content>
-                    <Image Source="..\Resources\edit.png" VerticalAlignment="Center" HorizontalAlignment="Center" Height="15" Width="15" />
+                    <Image Source="{simplic:Icon Name=usermanagement_edit_32x}" VerticalAlignment="Center" HorizontalAlignment="Center" Height="15" Width="15" />
                 </Button.Content>
             </Button>
             <Button Height="15" Width="15" DockPanel.Dock="Right" Margin="2,0,0,0" BorderThickness="0" Background="LightGray" Click="OnRemove">
                 <Button.Content>
-                    <Image Source="..\Resources\delete.png" VerticalAlignment="Center" HorizontalAlignment="Center" Height="15" Width="15" />
+                    <Image Source="{simplic:Icon Name=usermanagement_delete_32x}" VerticalAlignment="Center" HorizontalAlignment="Center" Height="15" Width="15" />
                 </Button.Content>
             </Button>
         </StackPanel>        
