Added: Localization; made changes in UserDetailsView

--- a/simplic-user/Simplic.User.UI/Views/ChangeUserPasswordView.xaml
+++ b/simplic-user/Simplic.User.UI/Views/ChangeUserPasswordView.xaml
@@ -15,14 +15,14 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Label Grid.Column="0" Grid.Row="0" Margin="5" Content="New password:" />
+        <Label Grid.Column="0" Grid.Row="0" Margin="5" Content="{simplic:Localization Key=usermanagment_new_pwd_label}" />
         <telerik:RadPasswordBox Grid.Column="1" Grid.Row="0" Height="27" VerticalAlignment="Top" Name="_passwordBox"
-                                Margin="0,5,5,5" Width="191" WatermarkContent="Enter new password" />
+                                Margin="0,5,5,5" Width="191" WatermarkContent="{simplic:Localization Key=usermanagment_enter_new_pwd_label}" />
 
         <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="Ok" Height="27" Width="80" Margin="0,0,5,5"
+            <Button Content="{simplic:Localization Key=usermanagment_ok_label}" Height="27" Width="80" Margin="0,0,5,5"
                     Command="{Binding Path=ChangePasswordCommand}" CommandParameter="{Binding ElementName=_passwordBox}"/>
-            <Button Content="Cancel" Height="27" Width="80" Margin="0,0,5,5"
+            <Button Content="{simplic:Localization Key=usermanagment_cancel_label}" Height="27" Width="80" Margin="0,0,5,5"
                     Command="{Binding Path=CancelCommand}"/>
         </StackPanel>
     </Grid>
