--- a/simplic-user/Simplic.User.UI/UserControls/StringComparisonFilterControl.xaml
+++ b/simplic-user/Simplic.User.UI/UserControls/StringComparisonFilterControl.xaml
@@ -1,5 +1,6 @@
 ﻿<UserControl x:Class="Simplic.User.UI.StringComparisonFilterControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:simplic="http://schemas.simplic-systems.com/2016/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
              xmlns:local="clr-namespace:Simplic.User.UI">
@@ -18,8 +19,8 @@
             <TextBox Name="_txt" Height="25" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="0" Margin="2,2,4,2"
                      Text="{Binding Path=FilteredText, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:StringComparisonFilterControl}}}"/>
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-                <telerik:RadButton Name="filterButton" Content="Filter" Click="OnFilter" Margin="2" Width="80"/>
-                <telerik:RadButton Name="clearButton" Content="Clear" Click="OnClear" Margin="2" Width="80"/>
+                <telerik:RadButton Name="filterButton" Content="{simplic:Localization Key=usermanagment_filter_label}" Click="OnFilter" Margin="2" Width="80"/>
+                <telerik:RadButton Name="clearButton" Content="{simplic:Localization Key=usermanagment_clear_label}" Click="OnClear" Margin="2" Width="80"/>
             </StackPanel>
         </Grid>
     </Border>
