--- a/simplic-user/Simplic.User.UI/Views/UserDetailsView.xaml
+++ b/simplic-user/Simplic.User.UI/Views/UserDetailsView.xaml
@@ -6,16 +6,22 @@
         xmlns:local="clr-namespace:Simplic.User.UI"
         xmlns:vm="clr-namespace:Simplic.User.UI"
         xmlns:converters="clr-namespace:Simplic.User.UI"
-        Title="{Binding Path=User.UserName}" Height="190" Width="800"
+        Height="337" Width="900"
         WindowStartupLocation="CenterOwner"
         dlgs:DialogBehavior.DialogViewModels="{Binding Dialogs}"
         LayoutContext="Win_UserDetails">
     <simplic:DefaultRibbonWindow.Resources>
+        <converters:PwdButtonContentConverter x:Key="PwdButtonContentConverter" TrueString="{simplic:Localization Key=usermanagment_set_pwd_label}" FalseString="{simplic:Localization Key=usermanagment_change_pwd_label}" />
+        <converters:UserToTitleConverter x:Key="UserToTitleConverter" NullString="{simplic:Localization Key=usermanagment_add_user_label}" />
+        <converters:PwdButtonVisibilityConverter x:Key="PwdButtonVisibilityConverter" />
         <converters:BoolToVisibilityConverter x:Key="TrueVisibilityConverter" VisibilityForTrue="Visible" VisibilityForFalse="Collapsed" />
         <converters:BoolToVisibilityConverter x:Key="FalseVisibilityConverter" VisibilityForTrue="Collapsed" VisibilityForFalse="Visible" />
         <converters:InvertBooleanConverter x:Key="InvertBooleanConverter" />
         <local:ChangeUserPasswordView x:Key="{x:Type vm:ChangeUserPasswordViewModel}" x:Shared="False" />
     </simplic:DefaultRibbonWindow.Resources>
+    <simplic:DefaultRibbonWindow.Title>
+        <Binding Path="User" Converter="{StaticResource UserToTitleConverter}" />
+    </simplic:DefaultRibbonWindow.Title>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -37,14 +43,14 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <Label Grid.Column="0" Grid.Row="0" Content="First Name:" Margin="5,5,0,5" />
+            <Label Grid.Column="0" Grid.Row="0" Content="{simplic:Localization Key=usermanagment_first_name_label}" Margin="5,5,0,5" />
             <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding Path=FirstName}" Margin="0,5,5,5" VerticalContentAlignment="Center" TabIndex="0" />
 
-            <Label Grid.Column="0" Grid.Row="1" Content="User Name:" Margin="5,0,0,5" />
+            <Label Grid.Column="0" Grid.Row="1" Content="{simplic:Localization Key=usermanagment_user_name_label}" Margin="5,0,0,5" />
             <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Path=UserName}" Margin="0,0,5,5" VerticalContentAlignment="Center" TabIndex="2"
                      IsEnabled="{Binding Path=IsCreate}"/>
 
-            <Label Grid.Column="0" Grid.Row="2" Content="Phone:" Margin="5,0,0,5" />
+            <Label Grid.Column="0" Grid.Row="2" Content="{simplic:Localization Key=usermanagment_phone_label}" Margin="5,0,0,5" />
             <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Path=Phone}" Margin="0,0,5,5" VerticalContentAlignment="Center" TabIndex="4" />
         </Grid>
 
@@ -57,30 +63,34 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <Label Grid.Column="0" Grid.Row="0" Content="Last Name:" Margin="5,5,0,5" />
+            <Label Grid.Column="0" Grid.Row="0" Content="{simplic:Localization Key=usermanagment_last_name_label}" Margin="5,5,0,5" />
             <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding Path=LastName}" Margin="0,5,5,5" VerticalContentAlignment="Center" TabIndex="1" />
 
-            <Label Grid.Column="0" Grid.Row="1" Content="Email:" Margin="5,0,0,5" />
+            <Label Grid.Column="0" Grid.Row="1" Content="{simplic:Localization Key=usermanagment_email_label}" Margin="5,0,0,5" />
             <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Path=Email}" Margin="0,0,5,5" VerticalContentAlignment="Center" TabIndex="3" />
 
             <Grid Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Right">
-                <Button Height="27" Width="170" Margin="10,0,5,0" Content="Change password"
-                        Visibility="{Binding Path=IsCreate, Converter={StaticResource FalseVisibilityConverter}}"
-                        Command="{Binding Path=ChangePasswordCommand}"/>
-                <StackPanel Width="170" Margin="10,0,5,0" Orientation="Horizontal"
-                            Visibility="{Binding Path=IsCreate, Converter={StaticResource TrueVisibilityConverter}}">
-                    <Label Content="Is AD user:" />
-                    <CheckBox Width="20" IsChecked="{Binding Path=IsADUser}" Margin="35,0,5,5" VerticalAlignment="Center" />
-                </StackPanel>
+                <Button Height="27" Width="170" Margin="10,0,5,0" Content="{Binding Path=IsCreate, Converter={StaticResource PwdButtonContentConverter}}"
+                        Command="{Binding Path=ChangePasswordCommand}">
+                    <Button.Visibility>
+                        <MultiBinding Converter="{StaticResource PwdButtonVisibilityConverter}">
+                            <Binding Path="IsCreate" />
+                            <Binding Path="IsADUser" />
+                        </MultiBinding>
+                    </Button.Visibility>
+                </Button>
             </Grid>
-            <Label Grid.Column="0" Grid.Row="2" Content="Is Active:" Margin="5,0,0,5" />
-            <CheckBox Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" Width="20" IsChecked="{Binding Path=IsActive}" Margin="0,0,5,5" VerticalAlignment="Center" TabIndex="5" />
+            <CheckBox Grid.Column="0" Grid.Row="2" HorizontalAlignment="Left" Width="120" IsChecked="{Binding Path=IsActive}"
+                      Margin="10,0,5,5" VerticalAlignment="Center" TabIndex="5" Content="{simplic:Localization Key=usermanagment_is_active_label}" Height="27" VerticalContentAlignment="Center" />
+            <CheckBox Grid.Column="0" Grid.Row="3" Content="{simplic:Localization Key=usermanagment_is_ad_user_label}" Width="80" IsChecked="{Binding Path=IsADUser}" Margin="10,0,0,0" VerticalAlignment="Center"
+                      Visibility="{Binding Path=IsCreate, Converter={StaticResource TrueVisibilityConverter}}" HorizontalAlignment="Left" />
         </Grid>
         <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="5">
-            <Button Height="27" Width="80" Content="Ok" Command="{Binding Path=OkCommand}" TabIndex="6" />
-            <Button Height="27" Width="80" Content="Cancel" Margin="10,0,0,0" Command="{Binding Path=CancelCommand}" IsDefault="True" TabIndex="7" />
+            <Button Height="27" Width="80" Content="{simplic:Localization Key=usermanagment_ok_label}" Command="{Binding Path=OkCommand}" TabIndex="6" />
+            <Button Height="27" Width="80" Content="{simplic:Localization Key=usermanagment_cancel_label}" Margin="10,0,0,0" Command="{Binding Path=CancelCommand}" IsDefault="True" TabIndex="7" />
         </StackPanel>
     </Grid>
 </simplic:DefaultRibbonWindow>
